updating with dark mode in header. fixing npm packages.

--- a/public_html/ui/_css/default/_type.css
+++ b/public_html/ui/_css/default/_type.css
@@ -20,7 +20,7 @@ html {
 }
 
 body {
-  font-family: 'Neue', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+  font-family: Helvetica, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Fira Sans', 'Droid Sans', ssans-serif;
   font-size: inherit;
   font-weight: 400;
   font-style: normal;
@@ -37,8 +37,15 @@ body {
 @custom-selector :--heading h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6;
 
 :--heading{
-  font-family: 'NeueBold', Helvetica;
+  font-family: Helvetica;
+  font-weight: 900;
   font-display: auto;
+}
+.fonts-loaded body{
+  font-family: 'Neue';
+}
+.fonts-loaded :--heading{
+  font-family: 'NeueBold';
 }
 
 h1, .h1 {
